generated-tests/tests/snapshots/rust/generated_tests__rust__test_generated_reference_type.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
let source2 = 42; let var7: &i32 = &source2;

AST:
(source_file
  (let_declaration
    (identifier source2)
    (integer_literal)
  )
  (let_declaration
    (identifier var7)
    (reference_type
      (primitive_type)
    )
    (reference_expression
      (identifier source2)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "source2",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
        Definition {
            name: "var7",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "source2",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 5,
            end_line: 1,
            end_column: 12,
        },
        SerializableUsage {
            name: "var7",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 23,
            end_line: 1,
            end_column: 27,
        },
        SerializableUsage {
            name: "source2",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 37,
            end_line: 1,
            end_column: 44,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
