generated-tests/tests/snapshots/rust/generated_tests__rust__test_generated_scoped_identifier.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
std::collections::HashMap::new()

AST:
(source_file
  (expression_statement
    (call_expression
      (scoped_identifier
        (scoped_identifier
          (scoped_identifier
            (identifier std)
            (identifier collections)
          )
          (identifier HashMap)
        )
        (identifier new)
      )
      (arguments)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
