generated-tests/tests/snapshots/rust/generated_tests__rust__test_generated_struct_item.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
struct TestStruct1 { field3: i32 }

AST:
(source_file
  (struct_item
    (type_identifier)
    (field_declaration_list
      (field_declaration
        (field_identifier)
        (primitive_type)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "TestStruct1",
            line_number: 1,
            definition_type: StructDefinition,
            scope: Some(
                "TestStruct1",
            ),
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
