generated-tests/tests/snapshots/rust/generated_tests__rust__test_generated_tuple_pattern.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
let (x15, y4) = tuple_val;

AST:
(source_file
  (let_declaration
    (tuple_pattern
      (identifier x15)
      (identifier y4)
    )
    (identifier tuple_val)
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "x15",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
        Definition {
            name: "y4",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "x15",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 6,
            end_line: 1,
            end_column: 9,
        },
        SerializableUsage {
            name: "y4",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 11,
            end_line: 1,
            end_column: 13,
        },
        SerializableUsage {
            name: "tuple_val",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 17,
            end_line: 1,
            end_column: 26,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
